Security reminder: If you have PHP's register_globals option set, you must
turn it off. MediaWiki will not work with it enabled.

== MediaWiki 1.27 ==

THIS IS NOT A RELEASE YET

MediaWiki 1.27 is an alpha-quality branch and is not recommended for use in
production.

=== Configuration changes in 1.27 ===
* Removed $wgUseLinkNamespaceDBFields
* Deprecated $wgResourceLoaderMinifierStatementsOnOwnLine and
  $wgResourceLoaderMinifierMaxLineLength, because there was little value in
  making the behavior configurable. The default values (`false` for the former,
  1000 for the latter) are now hard-coded.

=== New features in 1.27 ===
* $wgDataCenterId and $wgDataCenterRoles where added, which will serve as
  basic configuration settings needed for multi-datacenter setups.
  $wgDataCenterUpdateStickTTL was also added.

==== External libraries ====

=== Bug fixes in 1.27 ===

=== Action API changes in 1.27 ===

=== Action API internal changes in 1.27 ===

=== Languages updated in 1.27 ===

MediaWiki supports over 350 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.


=== Other changes in 1.27 ===


== Compatibility ==

MediaWiki 1.27 requires PHP 5.3.3 or later. There is experimental support for
HHVM 3.3.0.

MySQL is the recommended DBMS. PostgreSQL or SQLite can also be used, but
support for them is somewhat less mature. There is experimental support for
Oracle and Microsoft SQL Server.

The supported versions are:

* MySQL 5.0.3 or later
* PostgreSQL 8.3 or later
* SQLite 3.3.7 or later
* Oracle 9.0.1 or later
* Microsoft SQL Server 2005 (9.00.1399)

== Upgrading ==

1.27 has several database changes since 1.26, and will not work without schema
updates. Note that due to changes to some very large tables like the revision
table, the schema update may take quite long (minutes on a medium sized site,
many hours on a large site).
