@@ -65,7 +65,7 @@ class LocalSettingsGenerator {
 				'wgRightsText', 'wgMainCacheType', 'wgEnableUploads',
 				'wgMainCacheType', '_MemCachedServers', 'wgDBserver', 'wgDBuser',
 				'wgDBpassword', 'wgUseInstantCommons', 'wgUpgradeKey', 'wgDefaultSkin',
-				'wgMetaNamespace', 'wgLogo',
+				'wgMetaNamespace', 'wgLogo', 'wgEnableEmailLogin',
 			),
 			$db->getGlobalNames()
 		);
@@ -73,7 +73,8 @@ class LocalSettingsGenerator {
 		$unescaped = array( 'wgRightsIcon', 'wgLogo' );
 		$boolItems = array(
 			'wgEnableEmail', 'wgEnableUserEmail', 'wgEnotifUserTalk',
-			'wgEnotifWatchlist', 'wgEmailAuthentication', 'wgEnableUploads', 'wgUseInstantCommons'
+			'wgEnotifWatchlist', 'wgEmailAuthentication', 'wgEnableEmailLogin',
+			'wgEnableUploads', 'wgUseInstantCommons',
 		);
 
 		foreach ( $confItems as $c ) {
@@ -340,6 +341,7 @@ ${serverSetting}
 ## UPO means: this is also a user preference option
 
 \$wgEnableEmail = {$this->values['wgEnableEmail']};
+\$wgEnableEmailLogin = {$this->values['wgEnableEmailLogin']};
 \$wgEnableUserEmail = {$this->values['wgEnableUserEmail']}; # UPO
 
 \$wgEmergencyContact = \"{$this->values['wgEmergencyContact']}\";
